--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -379,6 +379,7 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 
 
 \subsection{Details on Educare}
+\label{app:details-educare}
 
 \begin{table}[H]
 \caption{Educare -- ABC/CARE Comparison}
