--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -49,7 +49,7 @@ University of Southern California}
 \singlespacing
 \thispagestyle{empty}
 \begin{abstract}
-\noindent This paper quantifies the life-cycle benefits from a widely implemented, prototypical early childhood program targeting disadvantaged families. The program fostered children's skills from ages 0 to 5. It also provided fulltime daycare to the mothers, which supported their employment and educational participation. It was evaluated by random assignment and followed participants through their mid 30s. We join experimental data with non-experimental data using economic models to predict the life-cycle benefits. They include the income of the parents of the treated children, as well the education, labor income, criminal activity, and health of the treated children. Our baseline median estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores, and find them wanting.
+\noindent This paper quantifies the life-cycle benefits from a widely implemented, prototypical early childhood program targeting disadvantaged families. The program fostered children's skills from ages 0 to 5. It also provided full-time daycare to the mothers, which supported their employment and educational participation. It was evaluated by random assignment and followed participants through their mid 30s. We join experimental data with non-experimental data using economic models to predict the life-cycle benefits. They include the income of the parents of the treated children, as well the education, labor income, criminal activity, and health of the treated children. Our baseline median estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores, and find them wanting.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, life-cycle benefits, long-term forecasts, rates of return. \\
@@ -88,7 +88,7 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 \textbf{[JJH print appendix --- Jorge, ask Tanya and Ganesh to make sure cross referencing with appendix is correct] [JLG: Ganesh and Tanya are working on this, and I will integrate their feedback on cross-referencing once they back to me.]}
 
-This paper estimates the life-cycle benefits of an influential early childhood program targeted to disadvantaged children that is currently being replicated around the world.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP in eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{appendix:educare} lists around 25 Educare programs, all of which implement curricula based on ABC/CARE. In this appendix, we also list the precise similarities across this programs. Our estimates are likely lower bounds for the returns of Educare. \textbf{[JJH: We should show the comparison in Buffett proposal] [JLG: The only variable that we have is attendance to Head Start. The coefficients characterizing the prediction model do not change when controlling for it. But there is a danger: there's quite a fraction of people with this information missing and the prediction becomes noisier. So it seems that we end up making more harm than good because at $a = a^*$ we have a big standard error in our comparison. We can mention this but I'm hesitant to make it our main strategy given the missing information.]} Evidence from ABC/CARE is highly relevant for contemporary policy discussions because their main components are present in a variety of current interventions. About 19\% of all African-American children would be eligible for ABC/CARE today and 43\% of African-American children were eligible at its inception.} The program has substantial impacts on the lives of both child participants and their mothers. Monetizing benefits and costs across multiple domains, we estimate a baseline internal rate of return of 13.7\% per annum and a baseline benefit/cost ratio of 7.3. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0, 18.3) and the benefit/cost ratio (1.52, 17.40). Consistent with the previous literature, there are substantial differences in economic returns that favor males.\footnote{\cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
+This paper estimates the life-cycle benefits of an influential early childhood program targeted to disadvantaged children that is currently being replicated around the world.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP in eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{app:details-educare} lists around 25 Educare programs, all of which implement curricula based on ABC/CARE. In this appendix, we also list the precise similarities across this programs. Our estimates are likely lower bounds for the returns of Educare. \textbf{[JJH: We should show the comparison in Buffett proposal] [JLG: The only variable that we have is attendance to Head Start. The coefficients characterizing the prediction model do not change when controlling for it. But there is a danger: there's quite a fraction of people with this information missing and the prediction becomes noisier. So it seems that we end up making more harm than good because at $a = a^*$ we have a big standard error in our comparison. We can mention this but I'm hesitant to make it our main strategy given the missing information.]} Evidence from ABC/CARE is highly relevant for contemporary policy discussions because their main components are present in a variety of current interventions. About 19\% of all African-American children would be eligible for ABC/CARE today and 43\% of African-American children were eligible at its inception.} The program has substantial impacts on the lives of both child participants and their mothers. Monetizing benefits and costs across multiple domains, we estimate a baseline internal rate of return of 13.7\% per annum and a baseline benefit/cost ratio of 7.3. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0, 18.3) and the benefit/cost ratio (1.52, 17.40). Consistent with the previous literature, there are substantial differences in economic returns that favor males.\footnote{\cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
 
 Our analysis contributes to a growing literature on the value of early-life programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term returns and not short-term arrays of treatment effects are relevant for policy analysis. However, long-term evidence on the effectiveness of these programs is limited given the short-term follow-up for most studies.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_QE,Heckman_Moon_etal_2010_RateofReturn}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report treatment effects for a few outcomes collected at early ages after program completion, e.g. IQ scores or school readiness measures.\footnote{See, e.g.,  \cite{Weiland_2013_CD_Impacts-of-Pre-K} and \cite{Kline_Walters_2016_QJE}.} Other studies, such as \citet{Kline_Walters_2016_QJE}, use early measures fit on auxiliary data to project life-cycle estimates of labor income. We show how misleading this practice can be. We analyze labor income as well as a number of non-market benefits. Because of the plausible ranges of the monetary value of of non-market benefits found in the literature, we conduct an extensive sensitivity analysis for this component of our estimates.
 
